k8s-deployment/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: pyredisapp
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis-pod
      app: pyredisapp
  template:
    metadata:
      name: redis-pod
      labels:
        name: redis-pod
        app: pyredisapp
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
