k8s-deployment/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    name: frontend-service
    app: pyredisapp
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: pyapp-pod
    app: pyredisapp
  type: LoadBalancer
