k8s-deployment/staging-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: stable
  labels:
    name: canary-service
    app: pyredisapp
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    name: pyapp-pod
    app: pyredisapp
    track: canary
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyapp-deployment
  labels:
    app: pyredisapp
spec:
  replicas: $CANARY_REPLICAS
  selector:
    matchLabels:
      app: pyredisapp
      track: canary
  template:
    metadata:
      name: pyapp-pod
      labels:
        app: pyredisapp
        track: canary
    spec:
      containers:
      - name: pyapp-container
        image: $DOCKER_IMAGE_NAME:$BUILD_NUMBER
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    name: redis-service
    app: pyredisapp
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    name: redis-pod
    app: pyredisapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: pyredisapp
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis-pod
      app: pyredisapp
  template:
    metadata:
      name: redis-pod
      labels:
        name: redis-pod
        app: pyredisapp
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
