k8s-deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadat:
  name: fanout-ingress
spec:
  rules:
    - http:
      paths:
        - path: /
          backend:
            serviceName: stable
            servicePort: 80   
        - path: /dev
          backend:
            serviceName: canary
            servicePort: 80
